# Devops-internals

./: .gitignore  Makefile  PLAN.md  README.md  VIVA_GUIDE.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
app/backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial.py
app/backend/app/: config.py  db.py  deps.py  exceptions.py  main.py  metrics.py  middleware.py  models.py  schemas.py  seed.py  worker.py
app/backend/app/routers/: audit.py  plans.py  sims.py  stats.py
app/backend/app/services/: hlr_adapter.py  msisdn_pool.py  sim_service.py
app/backend/mock_hlr/: main.py
app/backend/tests/: conftest.py  test_api.py  test_state_machine.py
app/frontend/: README.md  index.html
app/sample_data/: README.md  sample_bulk_provision.json
docker/: .dockerignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.mock-hlr  Dockerfile.worker  nginx.conf
docs/: DEVOPS_GUIDE.md  PROJECT_WALKTHROUGH.md  TOOLS_EXPLAINED.md  VIVA_PREP.md  architecture.html  dr-plan.html  index.html  runbook.html  submission.html
docs/assets/: app.js  styles.css
docs/screenshots/: README.md
jenkins/: Jenkinsfile  README.md
k8s/: README.md
k8s/base/: api-deployment.yaml  api-hpa.yaml  api-networkpolicy.yaml  (+10 more)
logging/: README.md
monitoring/: README.md
scripts/: load-test-locustfile.py  seed-postgres.sh  shot.sh  smoke-test.sh  traffic-loop.sh  wait-for-it.sh
terraform/: .gitignore  README.md
vault/: README.md
(+42 files in other folders)
