[project]
name = "sim-provisioning-backend"
version = "0.1.0"
description = "SIM Provisioning Automation Platform — backend API"
requires-python = ">=3.11"
authors = [{ name = "Sayuj" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "prometheus-fastapi-instrumentator>=7.0",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "python-json-logger>=2.0",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
